//
// Copyright 2018 Peter Vrenken.
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Entry Grpc service definition.
service EntryGrpcService
{
	rpc GetSingle (EntrySingleRequest) returns (EntrySingleResponse) {}
    rpc GetMultiple (EntryMultipleRequest) returns (stream EntryMultipleResponse) {}
    rpc GetRelated (EntryRelatedRequest) returns (stream EntryMultipleResponse) {}
    rpc Post (EntryPostRequest) returns (EntrySingleResponse) {}
	rpc Put (EntryPutRequest) returns (EntrySingleResponse) {}
	rpc Delete (EntrySingleRequest) returns (EntrySingleResponse) {}
}

message EntrySingleRequest
{
	Identifier EntryId = 1;
	EntryRelation EntryRelations = 2;
}

message EntryMultipleRequest
{
    repeated Identifier EntryIds = 1;
    EntryRelation EntryRelations = 2;
}
message EntryRelatedRequest
{
    Identifier EntryId = 1;
    EntryRelation EntryRelations = 2;
    EntryRelation EntriesWithRelation = 3;
}

message EntrySingleResponse
{
	Entry Entry = 1;
}

message EntryMultipleResponse
{
	Entry Entry = 1;
}

message EntryPostRequest
{
	Guid SpaceId = 1;
}

message EntryPutRequest
{
	Entry Entry = 1;
}
